# fh_utils

./: .gitignore  .nojekyll  CNAME  README.md  cli.html  fast-reload.html  hot-reload.html  icons.html  index.html  intro.html  jupyter.html  pyproject.toml  robots.txt  search.json  sitemap.xml  tailwind.html
docs/: _quarto.yml  cli.qmd  fast-reload.qmd  hot-reload.qmd  icons.qmd  index.qmd  jupyter.qmd  tailwind.qmd
examples/: demo.py  demo2.py  extension.ipynb
site_libs/bootstrap/: bootstrap.min.css
src/fh_utils/: __init__.py  cli.py  constants.py  demo.py  heroicons.py  icons.py  ipython_ext.py  server.py  tailwind.py
tests/: test_cli.py  test_heroicons.py  test_icons.py  test_ipython_ext.py  test_server.py  test_tailwind.py
