[project]
name = "fh_utils"
version = "0.1.1"
description = "A collection of utilities for FastHTML projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-fasthtml>=0.5.2",
    "diskcache>=5.6.3",
]

[project.urls]
"Homepage" = "https://github.com/phihung/fh_utils"
"Source" = "https://github.com/phihung/fh_utils"

[tool.uv.sources]
python-fasthtml = { git = "https://github.com/AnswerDotAI/fasthtml.git" }

[project.scripts]
demo = "fh_utils.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.0.284",
    "inline-snapshot>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term --cov-report html"
