[project]
name = "fh_utils"
version = "0.3.0"
description = "A collection of utilities for FastHTML projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-fasthtml>=0.6.8",
    "diskcache>=5.6.3",
    "typer>=0.12.5",
]

[project.urls]
"Homepage" = "https://github.com/phihung/fh_utils"
"Source" = "https://github.com/phihung/fh_utils"

# [tool.uv.sources]
# python-fasthtml = { git = "https://github.com/AnswerDotAI/fasthtml.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.0.284",
    "inline-snapshot>=0.13.0",
    "testbook>=0.4.2",
    "dirty-equals>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term --cov-report html"


[project.scripts]
fh_utils = "fh_utils.cli:app"
